1)Implemented the ui of the github repo list screen 2)Created the viewmodel for thie github repo list screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,5 +13,13 @@
         tools:ignore="GoogleAppIndexingWarning">
 
 
+        <activity android:name=".features.reposlist.ReposListActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+
     </application>
 </manifest>
