--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,7 @@ android {
 }
 ext {
     lifecycle_version = "2.0.0"
-    koin_version = ""
-    androidx_version = ""
+    koin_version = "2.0.0-rc-2"
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,15 +38,19 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha4"
+
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 
 
     // Koin for Android
-    implementation 'org.koin:koin-android:2.0.0-rc-2'
+    implementation "org.koin:koin-android:$koin_version"
     // or Koin for Lifecycle scoping
-    implementation 'org.koin:koin-androidx-scope:2.0.0-rc-2'
+    implementation "org.koin:koin-androidx-scope:$koin_version"
     // or Koin for Android Architecture ViewModel
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.0-rc-2'
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
 }
