--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.moustafasamhoury.githubchallenge">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".GithubReposApplication"
         android:allowBackup="true"
